@@ -18,6 +18,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -121,7 +122,10 @@ public class ProductSummaryServiceImpl implements ProductSummaryService {
                 findByCategory(new Food().getClass().getSimpleName(), page);
         if (listsProductSummary.isPresent()) {
             List<Long> listIdTopFood = listsProductSummary.get().stream()
-                    .map(productSummary -> productSummary.getProduct().getId()).toList();
+                    .map(productSummary -> Optional.ofNullable(productSummary.getProduct())
+                            .map(Product::getId)
+                            .orElse(-1L)) // Provide a default value (-1L in this example) if the product is null
+                    .collect(Collectors.toList());
             return listIdTopFood;
         }
 
